@@ -1,10 +1,13 @@
 package com.stpp.movies.services.movie;
 
-import com.stpp.movies.dto.MovieEditRequestDto;
-import com.stpp.movies.dto.MovieRequestDto;
-import com.stpp.movies.dto.MovieResponseDto;
+import com.stpp.movies.dto.movie.MovieEditRequestDto;
+import com.stpp.movies.dto.movie.MovieRequestDto;
+import com.stpp.movies.dto.movie.MovieResponseDto;
 import com.stpp.movies.entities.Movie;
+import com.stpp.movies.entities.Poster;
+import com.stpp.movies.exceptions.NotFoundException;
 import com.stpp.movies.repositories.MovieRepository;
+import com.stpp.movies.services.file.FileService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -12,79 +15,68 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
 
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
+@Transactional
 @Service
 @Validated
 public class MovieService {
 
-    private final MovieRepository movieRepository;
+  private final MovieRepository movieRepository;
+  private final FileService fileService;
 
-    private static final MovieMapper MAPPER = MovieMapper.INSTANCE;
+  private static final MovieMapper MAPPER = MovieMapper.INSTANCE;
 
-    public Optional<MovieResponseDto> getMovieById(@Valid Long id) {
-        Optional<Movie> movie = movieRepository.findById(id);
-        return movie.map(MAPPER::movieToResponseDto);
+  public MovieResponseDto getMovieById(@Valid Long id) {
+    return movieRepository.findById(id)
+      .map(MAPPER::movieToResponseDto)
+      .orElseThrow(() -> new NotFoundException("Movie with ID " + id + " not found"));
+  }
+
+  public MovieResponseDto createMovie(@Valid MovieRequestDto movieRequestDto) {
+    Movie movie = MAPPER.requestDtoToMovie(movieRequestDto);
+
+    if (movieRequestDto.getPosterId() != null) {
+      Poster poster = fileService.getPosterAsPoster(movieRequestDto.getPosterId());
+      movie.setPoster(poster);
+    } else {
+      movie.setPoster(null);
     }
 
-    @Transactional
-    public MovieResponseDto createMovie(@Valid MovieRequestDto movieRequestDto) {
-        Movie movie = MAPPER.requestDtoToMovie(movieRequestDto);
-        movie = movieRepository.save(movie);
-        return MAPPER.movieToResponseDto(movie);
-    }
+    movie = movieRepository.save(movie);
+    return MAPPER.movieToResponseDto(movie);
+  }
 
-    @Transactional
-    public List<MovieResponseDto> getAllMovies() {
-        return movieRepository
-                .findAllByOrderByReleaseDateAsc()
-                .stream()
-                .map(MAPPER::movieToResponseDto)
-                .collect(Collectors.toList());
-    }
+  public List<MovieResponseDto> getAllMovies() {
+    return movieRepository
+      .findAllByOrderByReleaseDateAsc()
+      .stream()
+      .map(MAPPER::movieToResponseDto)
+      .toList();
+  }
 
-    @Transactional
-    public MovieResponseDto editMovie(@Valid MovieEditRequestDto movieEditRequestDto) {
-        Movie movie = movieRepository.findById(movieEditRequestDto.getId())
-                .orElseThrow(() -> new NoSuchElementException("Movie with ID " + movieEditRequestDto.getId() + " not found"));
-        if (checkIfMovieEditRequestIsValid(movieEditRequestDto)) {
-            movie = MAPPER.editRequestDtoToMovie(movieEditRequestDto);
-        }
+  public MovieResponseDto editMovie(Long movieId, @Valid MovieEditRequestDto movieEditRequestDto) {
+    Movie movie = movieRepository.findById(movieId)
+      .orElseThrow(() -> new NotFoundException("Movie with ID " + movieId + " not found"));
 
-        movie = movieRepository.save(movie);
-        return MAPPER.movieToResponseDto(movie);
+    if (movieEditRequestDto.getPosterId() != null) {
+      if (!fileService.existsById(movieEditRequestDto.getPosterId())) {
+        throw new NotFoundException("Poster with ID " + movieEditRequestDto.getPosterId() + " not found");
+      }
+      Poster poster = fileService.getPosterAsPoster(movieEditRequestDto.getPosterId());
+      movie.setPoster(poster);
     }
+    
+    MAPPER.movieEditRequestDtoToMovie(movieEditRequestDto, movie);
 
-    @Transactional
-    public void deleteMovieById(@Valid Long id) {
-        movieRepository.findById(id)
-                .ifPresentOrElse(
-                        movie -> movieRepository.deleteById(id),
-                        () -> {
-                            throw new NoSuchElementException("Movie with ID " + id + " not found");
-                        }
-                );
-    }
+    movie = movieRepository.save(movie);
+    return MAPPER.movieToResponseDto(movie);
+  }
 
-    private static boolean checkIfMovieEditRequestIsValid(MovieEditRequestDto movieEditRequestDto) {
-        return movieEditRequestDto.getId() != null
-                && movieEditRequestDto.getTitle() != null
-                && movieEditRequestDto.getReleaseDate() != null
-                && movieEditRequestDto.getRating() != null
-                && movieEditRequestDto.getGenre() != null
-                && movieEditRequestDto.getDirector() != null
-                && movieEditRequestDto.getDescription() != null
-                && !movieEditRequestDto.getTitle().isEmpty()
-                && !movieEditRequestDto.getGenre().isEmpty()
-                && !movieEditRequestDto.getDirector().isEmpty()
-                && !movieEditRequestDto.getDescription().isEmpty()
-                && movieEditRequestDto.getRating() >= 1
-                && movieEditRequestDto.getRating() <= 10
-                && movieEditRequestDto.getTitle().length() <= 256
-                && movieEditRequestDto.getDescription().length() <= 1024;
+  public void deleteMovieById(@Valid Long id) {
+    if (!movieRepository.existsById(id)) {
+      throw new NotFoundException("Movie with ID " + id + " not found");
     }
+    movieRepository.deleteById(id);
+  }
 }
